Close the cue-model heldout gate; add the cue-shadow evaluation pipeline
The heldout promotion was honour-system (plan 08 defect 2): a genuinely
passing holdout report could be hand-copied onto an unrelated model's
header because nothing compared the report's own model_sha256 claim
against the shadow-form bytes it says it scored. provision-cue-model.sh
now reconstructs those bytes and refuses the mismatch;
test-provision-cue-model.sh proves the same fixture installs a
passing-but-wrong model clean with only that check removed.

Adds the observation-only cue-shadow path: trial.sh CUE_SHADOW records
bounded detector windows beside the anchored PCM, build-shadow-windows.py
joins them to independent labels, evaluate-shadow.py runs whole-session
holdouts into a durable cue-holdout-v1 report, and bb-cue-state.mjs is
the source-correct BB cue interpreter (a bang is BB's only while all
seven stalls and the Puppet box rule out every other source). The
detector result never reaches the input driver; promotion and control
stay separate gates. test-cue-trace-loop.sh now covers both remote
background loops, and TOOLS.md carries a row for every new script.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>